--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-mybatis.typeAliasesPackage=com.wms.entity
+mybatis.typeAliasesPackage=com.id.entity
 mybatis.mapperLocations=classpath:mapper/*.xml
 logging.level.com.shizhao.project.springdemo:DEBUG
 server.port=8080
